add receiver in example environment variables

--- a/config/.example.env
+++ b/config/.example.env
@@ -3,3 +3,4 @@ ETHEREUM_PVT_KEY="your_ethereum_private_key"
 TOKEN_SYMBOL="token_symbol"
 AMOUNT_DEPOSIT="0.042"
 AMOUNT_TRANSFER="0.014"
+RECEIVER="receiver_hermez_ethereum_address"
