--- a/config/.example.env
+++ b/config/.example.env
@@ -3,4 +3,5 @@ ETHEREUM_PVT_KEY="your_ethereum_private_key"
 TOKEN_SYMBOL="token_symbol"
 AMOUNT_DEPOSIT="0.042"
 AMOUNT_TRANSFER="0.014"
+AMOUNT_EXIT="0.014"
 RECEIVER="receiver_hermez_ethereum_address"
